# ETR

./: NewBehaviourScript.cs  NewBehaviourScript1.cs  README.md  export_color  ply2mesh.py  point2mesh.py  text.py  transf.py  unity_pose_esitmatecs
Assets/: NewBehaviourScript.cs
ConsoleApplication4/: ConsoleApplication4.sln
ConsoleApplication4/ConsoleApplication4/: ConsoleApplication4.cpp  ConsoleApplication4.vcxproj  ConsoleApplication4.vcxproj.filters
ConsoleApplication4/ConsoleApplication4/Release/: ConsoleApplication4.exe.recipe  ConsoleApplication4.iobj  ConsoleApplication4.ipdb
ConsoleApplication4/ConsoleApplication4/Release/ConsoleA.2fb8424d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ConsoleApplication4/ConsoleApplication4/x64/Release/: ConsoleApplication4.exe.recipe  ConsoleApplication4.iobj  ConsoleApplication4.ipdb
ConsoleApplication4/ConsoleApplication4/x64/Release/ConsoleA.2fb8424d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Scripts/: DebugTransform.cs  ViveTracker.cs  ViveTrackers.csv  ViveTrackersManager.cs  ViveTrackersManagerBase.cs  ViveTrackersManagerFake.cs  ViveTrackersTest.cs  ViveTrackingStateWatcher.cs
VRTrackerReader/: Mathematics.h  README.md  UDPSender.cpp  UDPSender.h  VRTrackerReader.cpp  VRTrackerReader.h  VRTrackerReader.ini  VRTrackerReader.sln  VRTrackerReader.vcxproj
VRTrackerReader/VRTrackerReader/: Mathematics.cpp  Mathematics.h  Structs.h  VRTrackerReader.cpp  VRTrackerReader.h  VRTrackerReader.ini  VRTrackerReader.vcxproj  VRTrackerReader.vcxproj.filters
VRTrackerReader/VRTrackerReader/x64/Debug/: VRTrackerReader.exe.recipe  vc142.idb  vrtrackerreader.obj.enc
VRTrackerReader/VRTrackerReader/x64/Debug/VRTrackerReader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VRTrackerReader.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
rtabmap/: CMakeLists.txt
rtabmap/corelib/include/rtabmap/core/: Camera.h  CameraEvent.h  CameraInfo.h  CameraRGBD.h  CameraThread.h  DBDriver.h  DBDriverSqlite3.h  EpipolarGeometry.h  Features2d.h  GlobalDescriptor.h  ICPTransmit.h  IMUThread.h  MattoRPY.h  Memory.h  Odometry.h  OdometryEvent.h  ParamEvent.h  Parameters.h  Rtabmap.h  RtabmapEvent.h  Signature.h  Transform.h  UserDataEvent.h  VWDictionary.h  VisualWord.h
rtabmap/corelib/include/rtabmap/core/camera/: CameraOpenNI2.h  CameraRealSense2.h
rtabmap/corelib/src/: CMakeLists.txt  Camera.cpp  CameraThread.cpp  DBDriver.cpp  DBDriverSqlite3.cpp  EpipolarGeometry.cpp  Features2d.cpp  ICPTransmit.cpp  IMUThread.cpp  MattoRPY.cpp  Memory.cpp  Odometry.cpp  OdometryThread.cpp  Optimizer.cpp  Parameters.cpp  RegistrationIcp.cpp  Rtabmap.cpp  Signature.cpp  SimpleIni.h  Statistics.cpp  Transform.cpp  VWDictionary.cpp  VisualWord.cpp  util3d_surface.cpp
rtabmap/corelib/src/camera/: CameraOpenNI2.cpp  CameraRealSense2.cpp
rtabmap/corelib/src/optimizer/: OptimizerG2O.cpp
rtabmap/guilib/include/rtabmap/gui/: CalibrationDialog.h  CameraViewer.h  CloudViewer.h  DataRecorder.h  DatabaseViewer.h  KeypointItem.h  LoopClosureViewer.h  MultiSessionLocSubView.h  MultiSessionLocWidget.h  OdometryViewer.h  PdfPlot.h  PreferencesDialog.h  StatsToolBox.h
rtabmap/guilib/include/rtabmap/utilite/: UPlot.h
rtabmap/guilib/src/: AboutDialog.cpp  CalibrationDialog.cpp  CameraViewer.cpp  CloudViewer.cpp  CreateSimpleCalibrationDialog.cpp  DataRecorder.cpp  DatabaseViewer.cpp  EditConstraintDialog.cpp  ExportBundlerDialog.cpp  ExportCloudsDialog.cpp  ExportDialog.cpp  KeypointItem.cpp  MainWindow.cpp  MultiSessionLocSubView.cpp  MultiSessionLocWidget.cpp  OdometryViewer.cpp  PdfPlot.cpp  PostProcessingDialog.cpp  PreferencesDialog.cpp  StatsToolBox.cpp
rtabmap/guilib/src/ui/: aboutDialog.ui  calibrationDialog.ui  loopClosureViewer.ui
rtabmap/guilib/src/utilite/: UPlot.cpp
rtabmap/utilite/include/rtabmap/utilite/: UConversion.h  UDestroyer.h  UDirectory.h  UEvent.h  UEventsHandler.h  UEventsManager.h  UEventsSender.h  UFile.h  ULogger.h  UMath.h  UMutex.h  UProcessInfo.h  USemaphore.h  UThread.h  UThreadC.h  UTimer.h  UVariant.h  UtiLite.h
rtabmap/utilite/include/rtabmap/utilite/Posix/: UThreadC.h
rtabmap/utilite/src/: UConversion.cpp  UDirectory.cpp  UEventsHandler.cpp  UEventsManager.cpp  UEventsSender.cpp  UFile.cpp  ULogger.cpp  UProcessInfo.cpp  UThread.cpp  UTimer.cpp
